--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,9 @@ set(headers
     src/sceneStructs.h
     src/preview.h
     src/utilities.h
+    src/bvh.h
+
     src/ImGui/imconfig.h
-	
 	src/ImGui/imgui.h
     src/ImGui/imconfig.h
     src/ImGui/imgui_impl_glfw.h
@@ -97,6 +98,7 @@ set(sources
     src/scene.cpp
     src/preview.cpp
     src/utilities.cpp
+    src/bvh.cpp
 	
     src/ImGui/imgui.cpp 
       src/ImGui/imgui_demo.cpp 
